--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </tr>
     </table>
     <hr>
-    <a href="file:///F:/web%20development/HTML-Personal%20site/hobbies.html">MY HOBBIEs</a>
+    <a href="hobbies.html">MY HOBBIEs</a>
 <h3>Skills</h3>
 <table cellspacing="20">
     <tr>
@@ -61,7 +61,7 @@
     </tr>
 </table>
     <hr>
-    <a href="file:///F:/web%20development/HTML-Personal%20site/Contact_ME.html">CONTACT DETAILS</a>
+    <a href="Contact_ME.html">CONTACT DETAILS</a>
     
 
 </body>
